@@ -625,7 +625,7 @@ This skill allows the player to hang or mount an item on the wall of a room.  Th
 with the room description, and while it is still GETtable, it is protected from mass \
 commands like GET ALL.  Items mounted or hung will have their display text altered, whereas \
 items put up using STICK will not.  In addition to hang/mount, other options will become \
-available depending on level and expertise.
+available depending on level and expertise, such as 'HIPS' (Hide in Plain Sight).
 
 DILIGENT_STUDYING=DILIGENTSTUDYING
 DILIGENTSTUDYING=<ABILITY>\
